PR/53393: coypu: move rint to the right section.